--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>RedditHub - Dive into anything</title>
-  <link rel="stylesheet" type="text/css" href="styles/boarder.css">
-  <link rel="stylesheet" type="text/css" href="styles/posts.css">
+  <title>RedditHub - Home</title>
+  <link rel="stylesheet" href="styles/boarder.css">
+  <link rel="stylesheet" href="styles/posts.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
   <script src="scripts/fetch.js" defer></script>
   <script src="scripts/printPosts.js" defer></script>
@@ -14,10 +14,6 @@
 </head>
 
 <body>
-  <audio id="submit-audio">
-    <source src="utilitys/audio.mp3" type="audio/mpeg">
-  </audio>
-
   <header>
     <div class="top-section">
       <button class="bi bi-list" onclick="toggleMenu()"></button>
