--- a/comments.html
+++ b/comments.html
@@ -15,20 +15,16 @@
 <body>
     <div id="menu" class="menu">
         <ul>
-            <li><a href="create-post.html">Create Post</a></li>
+            <li><a href="createPost.html">Create Post</a></li>
             <li><a href="index.html">Home</a></li>
         </ul>
     </div>
-
-    <audio id="submit-audio">
-        <source src="utilitys/audio.mp3" type="audio/mpeg">
-    </audio>
 
     <header>
         <div class="top-section">
             <button class="bi bi-list" onclick="toggleMenu()"></button>
             <a href="index.html">
-                <img src="utilitys/RHub-wink.png" alt="RedditHub Logo">
+                <img src="image/RHub-wink.png" alt="RedditHub Logo">
             </a>
             <div class="search-bar">
                 <input type="Search RedditHub" placeholder="Search RedditHub" id="search">
@@ -64,7 +60,7 @@
             </select>
             <label for="new-comment">Your Comment:</label>
             <textarea id="new-comment" required></textarea>
-            <button id="submit-comment">Post Comment</button>
+            <button id="submit-comment">Submit Comment</button>
         </div>
         <ul id="comments-list"></ul>
     </div>
