--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>RedditHub - Home</title>
   <link rel="stylesheet" href="styles/boarder.css">
-  <link rel="stylesheet" href="styles/posts.css">
+  <link rel="stylesheet" href="styles/post.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
   <script src="scripts/fetch.js" defer></script>
   <script src="scripts/printPosts.js" defer></script>
@@ -18,7 +18,7 @@
     <div class="top-section">
       <button class="bi bi-list" onclick="toggleMenu()"></button>
       <a href="index.html">
-        <img src="utilitys/RHub-wink.png" alt="RedditHub Logo">
+        <img src="image/RHub-wink.png" alt="RedditHub Logo">
       </a>
       <div class="search-bar">
         <input type="Search RedditHub" placeholder="Search RedditHub" id="search">
@@ -32,7 +32,7 @@
 
   <div id="menu" class="menu">
     <ul>
-      <li><a href="create-post.html">Create Post</a></li>
+      <li><a href="createPost.html">Create Post</a></li>
     </ul>
   </div>
   <div id="posts-container"></div>
