--- a/createPost.html
+++ b/createPost.html
@@ -6,11 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>RedditHub - Create Post</title>
     <link rel="stylesheet" href="styles/boarder.css">
-    <link rel="stylesheet" href="styles/create-post.css">
+    <link rel="stylesheet" href="styles/createPost.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
     <script src="scripts/playsound.js" defer></script>
     <script src="scripts/togglemenu.js" defer></script>
-    <script src="scripts/create-post.js" defer></script>
+    <script src="scripts/createPost.js" defer></script>
 </head>
 
 <body>
@@ -20,13 +20,13 @@
         </ul>
     </div>
     <audio id="submit-audio">
-        <source src="utilitys/audio.mp3" type="audio/mpeg">
+        <source src="sound/audio.mp3" type="audio/mpeg">
     </audio>
     <header>
         <div class="top-section">
             <button class="bi bi-list" onclick="toggleMenu()"></button>
             <a href="index.html">
-                <img src="utilitys/RHub-wink.png" alt="RedditHub Logo">
+                <img src="image/RHub-wink.png" alt="RedditHub Logo">
             </a>
             <div class="search-bar">
                 <input type="Search RedditHub" placeholder="Search RedditHub" id="search">
